<resources>
    <string name="app_name">"Akhdmny Driver"</string>

    <string name="underline"> <u>Forgot Password?</u></string>
    <string name="skip"> <u>Skip Login</u></string>
    <string name="Register"> <u>Register</u></string>
    <string name="Resend"> <u>Resend</u></string>
    <string name="msg"> <u>Write here...</u></string>
    <string name="Enter_code_Text"> Please enter the verification code</string>
    <string name="login_Text">LOGIN TO YOUR ACCOUNT</string>
    <string name="success">Your Complain has been added</string>
    <string name="successBid">Success! Waiting for the customer… </string>
    <string name="successParcel">Your Parcel request has been added</string>
    <string name="success_CartItem">Item has been added to the cart</string>
    <string name="error_text">Please enter a message</string>
    <string name="error">No Record Found</string>
    <string name="open">Open Navigation</string>
    <string name="Loading_history">Loading complaint history…</string>
    <string name="Loading">Adding your Complaint…</string>
    <string name="FirstName">First Name</string>
    <string name="call">Call Driver</string>
    <string name="call_">Call</string>
    <string name="chat">Chat</string>
    <string name="cancel">Order Cancel</string>
    <string name="LastName">Last Name</string>
    <string name="Country">Country</string>
    <string name="password">Password</string>
    <string name="confirm_pass">Confirm Password</string>
    <string name="confirm">Confirm</string>
    <string name="confirm_order">Confirm Order</string>
    <string name="email">Email</string>
    <string name="gender">Gender</string>
    <string name="address">Address</string>
    <string name="saveBtn">Save</string>
    <string name="online">Be Available</string>
    <string name="available">Available</string>
    <string name="Bz">Be Busy</string>
    <string name="busy">Busy</string>
    <string name="blocked">Blocked</string>
    <string name="bid">Bid here…</string>
    <string name="status">Status :</string>
    <string name="Mobile">Mobile</string>
    <string name="close">Close Navigation</string>
    <string name="Btn_MyLoc">My Location</string>
    <string name="BtnServices">Services</string>
    <string name="BtnSearch">Search</string>
    <string name="BtnaddToCart">Add to Cart</string>
    <string name="RemoveaddToCart">Remove from Cart</string>
    <string name="searchPlace">Enter place</string>
    <string name="resturantName">Name</string>
    <string name="action_delete">Delete</string>
    <string name="listen">Listen</string>
    <string name="record">Record</string>
    <string name="remove">Remove</string>
    <string name="total_amount">Total Amount</string>
    <string name="action_copy">Copy</string>
    <string name="copied_message">Message copied!</string>
    <string name="remove_item">Item has been removed successfully</string>
    <string name="disscount">Best Discount</string>
    <string name="discount">Discount</string>
    <string name="distance">Distance</string>
    <string name="description">Description</string>
    <string name="total">Total services</string>
    <string name="finalTotal">Final Total</string>
    <string name="Coupon">Have a Coupon?</string>
    <string name="Message">Enter message…</string>
    <string name="amount">0.0</string>
    <string name="btnSend">Send</string>
    <string name="done">Done</string>
    <string name="title">Title</string>
    <string name="saudia">Saudi Arabia</string>
    <string name="notification">No Notifications at this moment</string>
    <string name="notifications">Notifications</string>
    <string name="Complaint">New</string>
    <string name="map">Map</string>
    <string name="new_orders">New Orders</string>
    <string name="driver_orders">Deliver Orders</string>
    <string name="history">History</string>
    <string name="Home">Home</string>
    <string name="settings">Settings</string>
    <string name="complaint">Complaint</string>
    <string name="lang">Language</string>
    <string name="order">Orders</string>
    <string name="order_req">Order Request</string>
    <string name="contact">Contact Us</string>
    <string name="Cancel">Cancel</string>
    <string name="cancel_order">Cancel Order</string>
    <string name="rate">Rate Our App</string>
    <string name="langType">English</string>
    <string name="logout">Logout</string>
    <string name="profile">Profile</string>
    <string name="login">Login</string>
    <string name="accept_o">Accept order</string>قبول الطلب
    <string name="ebill">E-Bill</string>
    <string name="Orders">Orders</string>
    <string name="deliver">Deliver Order</string>
    <string name="new_msg">New message…</string>
    <string name="rating">Rating:</string>
    <string name="date">Date:</string>
    <string name="orderNum">Order Number:</string>
    <string name="rating3">3.0</string>
    <string name="tip">Tip</string>
    <string name="final_amount">Final Amount</string>
    <string name="order_details">Order Details</string>
    <string name="order_info">Order Information</string>
    <string name="order_type">Order Type</string>
    <string name="category">Category</string>
    <string name="total_dis">Total Distance</string>
    <string name="client">Client Review</string>
    <string name="client_rate">Client Rate</string>
    <string name="price">Price</string>
    <string name="menu_english">English</string>
    <string name="menu_arabic">Arabic</string>
    <string name="dialog_language_title_select_language">Select language</string>

    <string name="total_price">Total Price</string>
    <string name="deliverd">Delivered</string>
    <string name="pending">Pending</string>
    <string name="my_orders">My Orders</string>
    <string name="blnce">Your Balance:</string>
    <string name="date_time">Date-Time</string>
    <string name="details">Details</string>
    <string name="currency">Currency</string>
    <string name="_amount">Amount</string>
    <string name="transaction">Transactions</string>
    <string name="reply">Reply</string>
    <string name="order_cancel">Order has been Canceled</string>

</resources>
