<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/transaction_layout"
        android:padding="5dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="14sp"
            android:padding="@dimen/google_1x"
            android:textAlignment="center"
            android:id="@+id/date_time"
            android:text="@string/date_time"/>

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="14sp"
            android:id="@+id/details"
            android:padding="@dimen/google_1x"
            android:textAlignment="center"
            android:text="@string/details"/>

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="14sp"
            android:id="@+id/finalAmountTv"
            android:padding="@dimen/google_1x"
            android:textAlignment="center"
            android:text="@string/_amount"/>
    </LinearLayout>

</LinearLayout>