<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" 
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <android.support.v7.widget.CardView
        android:id="@+id/cardViewParent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/google_1x">
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
            android:orientation="horizontal">
            
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:padding="15dp"
                android:textSize="16sp"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                android:textAlignment="textStart"

                android:text="@string/blnce"/>

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:padding="15dp"
                android:textSize="16sp"
                android:id="@+id/totalAmountTv"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                android:textAlignment="textStart"

                android:hint="@string/amount"/>
        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/google_1x">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="14sp"
                android:padding="@dimen/google_1x"
                android:textAlignment="center"
                android:text="@string/date_time"/>

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="14sp"
                android:padding="@dimen/google_1x"
                android:textAlignment="center"
                android:text="@string/details"/>

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="14sp"
                android:padding="@dimen/google_1x"
                android:textAlignment="center"
                android:text="@string/_amount"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/recyclerView"
            android:padding="@dimen/google_1x"
            android:orientation="horizontal">

        </android.support.v7.widget.RecyclerView>
    </android.support.v7.widget.CardView>


</LinearLayout>