<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/OrderBidScreen"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ToolbarTheme">
            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                app:titleTextColor="@color/colorAccent"
                app:popupTheme="@style/ToolbarTheme"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary">


                <TextView
                    android:id="@+id/tvTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/colorAccent"
                    android:text="@string/title"
                    android:textSize="20sp"
                    android:textStyle="bold" />


            </android.support.v7.widget.Toolbar>
        </android.support.design.widget.AppBarLayout>


    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="@dimen/twenty"
            android:textColor="@android:color/black"
            android:text="@string/total_amount"/>

        <TextView
            android:layout_width="0dp"
            android:layout_weight="2"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:id="@+id/total_amount"
            android:textSize="@dimen/twenty"
            android:textColor="@android:color/black"
            android:text="0.0"/>

    </LinearLayout>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="@dimen/input_button_height"
            android:layout_marginEnd="@dimen/input_button_height"
            android:layout_marginTop="@dimen/book_border"
            android:hint="@string/bid"
            android:padding="@dimen/book_border"
            android:inputType="number"
            android:background="@drawable/edit_text_bg"
            android:id="@+id/et_bid"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <Button
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textStyle="bold"
                android:layout_marginStart="@dimen/twenty"
                android:layout_marginEnd="@dimen/book_border"
                android:id="@+id/CancelOrder"
                android:background="@color/Red"
                android:textColor="@android:color/white"
                android:text="@string/cancel_order"/>

            <Button
                android:layout_width="0dp"
                android:layout_weight="2"
                android:textAlignment="center"
                android:layout_height="wrap_content"
                android:id="@+id/confirmOrder"
                android:textStyle="bold"
                android:layout_marginStart="@dimen/book_border"
                android:layout_marginEnd="@dimen/twenty"
                android:background="@color/colorPrimary"
                android:textColor="@android:color/white"
                android:text="@string/accept_o"/>

        </LinearLayout>

    </LinearLayout>

    </ScrollView>

</LinearLayout>