<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:sothree="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:orientation="horizontal"
        android:id="@+id/topBar"
        android:background="@color/colorPrimaryDark">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/statusColorImg"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="@dimen/book_border"
            android:background="@drawable/reddot_dash"
            app:civ_border_color="@color/colorPrimaryDark"
            app:civ_border_width="2dp" />


        <TextView
            android:id="@+id/titleTopBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:text="@string/status"
            android:textColor="@color/colorAccent" />

        <TextView
            android:id="@+id/titleBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:text="@string/busy"
            android:textColor="@color/colorAccent" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1">

        </LinearLayout>

        <Button
            android:id="@+id/buttonStatus"
            android:layout_width="120dp"
            android:layout_height="35dp"
            android:layout_marginTop="@dimen/book_border"
            android:layout_marginRight="@dimen/google_1x"
            android:layout_marginLeft="@dimen/google_1x"
            android:layout_marginBottom="@dimen/google_1x"
            android:textColor="@color/white"
            android:background="@color/green"
            android:layout_alignParentRight="true"
            android:text="@string/online" />


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <com.google.android.gms.maps.MapView
            android:id="@+id/map"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>



</LinearLayout>