<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ToolbarTheme">
            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                app:titleTextColor="@color/colorAccent"
                app:popupTheme="@style/ToolbarTheme"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary">


                <TextView
                    android:id="@+id/tvTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/colorAccent"
                    android:text="@string/title"
                    android:textSize="20sp"
                    android:textStyle="bold" />


            </android.support.v7.widget.Toolbar>
        </android.support.design.widget.AppBarLayout>


    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/google_1x"
        android:layout_marginTop="@dimen/book_border">

        <com.llollox.androidtoggleswitch.widgets.ToggleSwitch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:textToggleLeft="@string/map"
            app:textToggleRight="@string/order_details"
            app:checkedBackgroundColor="@color/colorPrimaryDark"
            app:checkedTextColor="@color/colorAccent"
            android:id="@+id/toggleButtons"
            app:uncheckedTextColor="@android:color/white"
            app:toggleWidth="122dp"/>

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/map_layout">



        <com.google.android.gms.maps.MapView
            android:id="@+id/map"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />


        <android.support.constraint.ConstraintLayout
            android:id="@+id/callChatBtns"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|bottom"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="@dimen/twenty">


            <Button
                android:id="@+id/driverChat"
                android:layout_width="156dp"
                android:layout_height="wrap_content"
                android:background="#00ffffff"
                android:paddingStart="@dimen/thirty"
                android:paddingEnd="@dimen/aar_wave_height"
                android:textAlignment="center"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/imageView7"
                app:layout_constraintEnd_toEndOf="@+id/imageView7"
                app:layout_constraintTop_toTopOf="@+id/imageView7" />

            <Button
                android:id="@+id/driverCall"
                android:layout_width="156dp"
                android:layout_height="wrap_content"
                android:background="#00ffffff"
                android:paddingStart="@dimen/thirty"
                android:paddingEnd="@dimen/aar_wave_height"
                android:textAlignment="center"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/imageView7"
                app:layout_constraintStart_toStartOf="@+id/imageView7"
                app:layout_constraintTop_toTopOf="@+id/imageView7" />

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="322dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/botton_buttons" />

        </android.support.constraint.ConstraintLayout>


</FrameLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:id="@+id/scrollView">

        <LinearLayout
            android:id="@+id/OrdersLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/MyOrdersLayOut"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="visible">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/RV_MyOrders"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/google_1x">

                </android.support.v7.widget.RecyclerView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:background="@color/colorPrimaryDark"
                    android:paddingTop="@dimen/book_border"
                    android:text="@string/total_amount"
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/total_amount"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="0"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:background="@color/yellow_new"
                    android:paddingTop="@dimen/book_border"
                    android:text="@string/tip"
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tip"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="0 "
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textStyle="bold" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:background="@color/dark_green"
                    android:paddingTop="@dimen/book_border"
                    android:text="@string/final_amount"
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/final_amount"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="0.0"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textStyle="bold" />

            </LinearLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <Button
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:layout_marginStart="@dimen/twenty"
                    android:layout_marginEnd="@dimen/book_border"
                    android:id="@+id/CancelOrder"
                    android:background="@color/Red"
                    android:textColor="@android:color/white"
                    android:text="@string/cancel_order"/>

                <Button
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:textAlignment="center"
                    android:layout_height="wrap_content"
                    android:id="@+id/deliver"
                    android:textStyle="bold"
                    android:layout_marginStart="@dimen/book_border"
                    android:layout_marginEnd="@dimen/twenty"
                    android:background="@color/colorPrimary"
                    android:textColor="@android:color/white"
                    android:text="@string/deliver"/>

            </LinearLayout>



        </LinearLayout>
    </ScrollView>

</LinearLayout>